--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "duplicate store name" : "AkashCLI/squad2",
+  "main store link" : "https://techm-squad2.myshopify.com/",
+  "store password" : "squad2"
 }
