--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,36 +4,29 @@ on:
   push:
     branches:
       - main
-      
-env:
-  CI: false
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: '14'
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Build project
-        run: npm run build
-
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v2
-        with:
-          name: production-files
-          path: ./build
-
+      - name: Run tests
+        run: npm test
+        
   deploy:
     name: Deploy
     needs: build
