--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,26 +4,33 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      
+env:
+  CI: false
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: 16
 
-      - name: Run tests
-        run: npm test
-        
+      - name: Build project
+        run: npm run build
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./build
+
   deploy:
     name: Deploy
     needs: build
